--- a/style.css
+++ b/style.css
@@ -43,8 +43,7 @@ body{
 } */
 .faq{
     font-family: Garamond;
-    font-weight: bold;
-    font-size: 50px;
+    font-weight: bold; 
 }
 
 
@@ -62,7 +61,11 @@ body{
     .grid-box{
         flex-direction: column;
     }
-    .slider-item {
-         
+    .contact{
+        flex-direction: column;
+        width: 100%;
+    }
+    .contact-form{
+        width: 100%;
     }
 }
